--- a/central.html
+++ b/central.html
@@ -261,5 +261,24 @@
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/webflow.eef62405e.js" type="text/javascript"></script>
     <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
+<a href="javascript:void(0);" id="scroll" title="Scroll to Top" style="display: none; float: right;"><img src="img/up.png" alt=""><span></span></a>
 </body>
+ 
+ <script>
+     $(document).ready(function() {
+       $(window).scroll(function() {
+           if ($(this).scrollTop() > 100) {
+               $('#scroll').fadeIn();
+           } else {
+               $('#scroll').fadeOut();
+           }
+       });
+       $('#scroll').click(function() {
+           $("html, body").animate({
+               scrollTop: 0
+           }, 600);
+           return false;
+       });
+    });
+ </script>
 </html>
