textual changes of scope, research & ideation in internal pages

--- a/central.html
+++ b/central.html
@@ -70,7 +70,7 @@
             <div class="row w-row">
                 <div data-ix="col1" class="col1 w-col w-col-6">
                     <h3 class="heading-18">Scope</h3>
-                    <p class="paragraph-3">This is a concept for searching Schools and Colleges just like we search Restaurants in Zomato. Herein the user will get the list of Schools and Colleges according to the area he is living in. Also the user can search for Schools and Colleges according to any specific area they prefer. Moreover,the user can also Favourite his/her School or College and also view all the evenets that are happening in there.</p>
+                    <p class="paragraph-3">While searching for some footwear to buy, I managed to get into Central leather work’s website, and to be honest I was extremely disappointed with their presentation. This invoked me to redesign the website, and I started working on this.    </p>
                 </div>
                 <div data-ix="col2" class="col2 p w-col w-col-6">
                     <h4 class="heading-20 _1">Type</h4>
@@ -104,14 +104,14 @@
             <div class="row p w-row">
                 <div class="w-clearfix w-col w-col-11"><img src="img/5a2bfe394584a6000127dc64_search.png" width="32" class="image-23" />
                     <h3 class="heading-21">RESEARCH</h3>
-                    <p class="paragraph-4">I spent a couple of hours understanding the problem domain. Found out how big the problem is, what are the current solutions available, and possible ways to mitigate this problem. I had to personally spent time interviewing the founder and the co-founders of the App initiative understanding the process in detail. This gave me insights I needed to define a solution.</p>
+                    <p class="paragraph-4">I tried to play around the functionalities of the website, and was not quite impressed. So, I finally decided to use primary color as yellow to make the content and product look relatable. And to make it interesting and jazz up things I added a pinch of red and blue as secondary colors.</p>
                 </div>
                 <div class="column-6 w-col w-col-1"></div>
             </div>
             <div class="row p w-row">
                 <div class="w-clearfix w-col w-col-11"><img src="img/5a2bfe39a298f50001116aae_idea.png" width="32" class="image-23" />
                     <h3 class="heading-21">IDEATION</h3>
-                    <p class="paragraph-4">I spent a couple of hours understanding the problem domain. Found out how big the problem is, what are the current solutions available, and possible ways to mitigate this problem. I had to personally spent time interviewing the founder and the co-founders of the App initiative understanding the process in detail. This gave me insights I needed to define a solution.</p>
+                    <p class="paragraph-4">As I was not impressed by the functionalities as well, I went through few retail website and planned to add some minimal and significant functionalities. I added a page to feature the collections, latest offers and displayed similar product depending on what user is browsing. I also exhibited the services that can be provided by the retailer and categorized men’s and women’s footwear section. </p>
                 </div>
                 <div class="column-6 w-col w-col-1"></div>
             </div>
