--- a/cooklist.html
+++ b/cooklist.html
@@ -70,7 +70,7 @@
             <div class="row w-row">
                 <div data-ix="col1" class="col1 w-col w-col-6">
                     <h3 class="heading-18">Scope</h3>
-                    <p class="paragraph-3">This is a concept for searching Schools and Colleges just like we search Restaurants in Zomato. Herein the user will get the list of Schools and Colleges according to the area he is living in. Also the user can search for Schools and Colleges according to any specific area they prefer. Moreover,the user can also Favourite his/her School or College and also view all the evenets that are happening in there.</p>
+                    <p class="paragraph-3">Technology can make anything and everything easily accessible. The idea behind this was to make the existing cooking application more interactive and to provide the user with healthy, delicious meal recipe using the groceries available, putting the user’s time in the speeding world in mind to motivate them about the healthy eating habits.</p>
                 </div>
                 <div data-ix="col2" class="col2 p w-col w-col-6">
                     <h4 class="heading-20 _1">Type</h4>
@@ -109,14 +109,14 @@
             <div class="row p w-row">
                 <div class="w-clearfix w-col w-col-11"><img src="img/5a2bfe394584a6000127dc64_search.png" width="32" class="image-23" />
                     <h3 class="heading-21">RESEARCH</h3>
-                    <p class="paragraph-4">I spent a couple of hours understanding the problem domain. Found out how big the problem is, what are the current solutions available, and possible ways to mitigate this problem. I had to personally spent time interviewing the founder and the co-founders of the App initiative understanding the process in detail. This gave me insights I needed to define a solution.</p>
+                    <p class="paragraph-4">I decided to pick the bright colors to make the app interactive and interesting to connect with the emotion of the working class specifically. The main emphasis on the design was to keep a simplistic and clean layout with ample of negative space, allowing the well-executed imaginary and typography to shine.</p>
                 </div>
                 <div class="column-6 w-col w-col-1"></div>
             </div>
             <div class="row p w-row">
                 <div class="w-clearfix w-col w-col-11"><img src="img/5a2bfe39a298f50001116aae_idea.png" width="32" class="image-23" />
                     <h3 class="heading-21">IDEATION</h3>
-                    <p class="paragraph-4">I spent a couple of hours understanding the problem domain. Found out how big the problem is, what are the current solutions available, and possible ways to mitigate this problem. I had to personally spent time interviewing the founder and the co-founders of the App initiative understanding the process in detail. This gave me insights I needed to define a solution.</p>
+                    <p class="paragraph-4">The app will help user to streamline their decision-making process to have unhealthy food or pick healthy and delightful cuisine which can be prepared in few minutes depending on the time they can devote. I was not satisfied with the end result so decided to add some fictionalities. The user will be able to connect to the grocery store chains and will be able to go through recipe that they can cook depending on the time and groceries they have in hand.</p>
                 </div>
                 <div class="column-6 w-col w-col-1"></div>
             </div>
