--- a/getblu.html
+++ b/getblu.html
@@ -71,7 +71,7 @@
             <div class="row w-row">
                 <div data-ix="col1" class="col1 w-col w-col-6">
                     <h3 class="heading-18">Scope</h3>
-                    <p class="paragraph-3">This is a concept for searching Schools and Colleges just like we search Restaurants in Zomato. Herein the user will get the list of Schools and Colleges according to the area he is living in. Also the user can search for Schools and Colleges according to any specific area they prefer. Moreover,the user can also Favourite his/her School or College and also view all the evenets that are happening in there.</p>
+                    <p class="paragraph-3">Get Blue is a kind of urban survival app. This app is community service platform that connects the user to all the basic assistance required throughout day to day life. This allows the working class through better job prospects and transparent opportunities. So, I planned to work accordingly, keeping in mind the simplicity and emotion of the users. </p>
                 </div>
                 <div data-ix="col2" class="col2 p w-col w-col-6">
                     <h4 class="heading-20 _1">Type</h4>
@@ -110,14 +110,14 @@
             <div class="row p w-row">
                 <div class="w-clearfix w-col w-col-11"><img src="img/5a2bfe394584a6000127dc64_search.png" width="32" class="image-23" />
                     <h3 class="heading-21">RESEARCH</h3>
-                    <p class="paragraph-4">I spent a couple of hours understanding the problem domain. Found out how big the problem is, what are the current solutions available, and possible ways to mitigate this problem. I had to personally spent time interviewing the founder and the co-founders of the App initiative understanding the process in detail. This gave me insights I needed to define a solution.</p>
+                    <p class="paragraph-4">This app is community service platform that connects the user to all the basic assistance required throughout day to day life. I wanted the end result to be so neat and attractive that it can be used by a layman as well.</p>
                 </div>
                 <div class="column-6 w-col w-col-1"></div>
             </div>
             <div class="row p w-row">
                 <div class="w-clearfix w-col w-col-11"><img src="img/5a2bfe39a298f50001116aae_idea.png" width="32" class="image-23" />
                     <h3 class="heading-21">IDEATION</h3>
-                    <p class="paragraph-4">I spent a couple of hours understanding the problem domain. Found out how big the problem is, what are the current solutions available, and possible ways to mitigate this problem. I had to personally spent time interviewing the founder and the co-founders of the App initiative understanding the process in detail. This gave me insights I needed to define a solution.</p>
+                    <p class="paragraph-4">The scope was huge as it will have multiple functionalities, so I tried to work with blue as the primary color. I put everything upfront with extremely clear call to action. On one hand, it connects people with the house help and on the other hand it will also allow to rate and refer the professionals. I went through many iterations to ensure the right content gets showcased and was completely satisfied with the outcome which was simple and interactive.</p>
                 </div>
                 <div class="column-6 w-col w-col-1"></div>
             </div>
