--- a/retail-analysis.html
+++ b/retail-analysis.html
@@ -71,7 +71,7 @@
             <div class="row w-row">
                 <div data-ix="col1" class="col1 w-col w-col-6">
                     <h3 class="heading-18">Scope</h3>
-                    <p class="paragraph-3">This is a concept for searching Schools and Colleges just like we search Restaurants in Zomato. Herein the user will get the list of Schools and Colleges according to the area he is living in. Also the user can search for Schools and Colleges according to any specific area they prefer. Moreover,the user can also Favourite his/her School or College and also view all the evenets that are happening in there.</p>
+                    <p class="paragraph-3">While working for a UK based retail client, I prepared a dashboard to represent the sales information. Since the project dashboard is confidential, I redesigned the pages to showcase the simple infographics. </p>
                 </div>
                 <div data-ix="col2" class="col2 p w-col w-col-6">
                     <h4 class="heading-20 _1">Type</h4>
@@ -101,14 +101,14 @@
             <div class="row p w-row">
                 <div class="w-clearfix w-col w-col-11"><img src="img/5a2bfe394584a6000127dc64_search.png" width="32" class="image-23" />
                     <h3 class="heading-21">RESEARCH</h3>
-                    <p class="paragraph-4">I spent a couple of hours understanding the problem domain. Found out how big the problem is, what are the current solutions available, and possible ways to mitigate this problem. I had to personally spent time interviewing the founder and the co-founders of the App initiative understanding the process in detail. This gave me insights I needed to define a solution.</p>
+                    <p class="paragraph-4">The idea behind the infographical representation was to make the overall sales analysis report easy to read by people who just require the overall sales figure and not the detailed information. The year/country wise detail was put together based on product category. Users will be able to connect data to its context in the business.</p>
                 </div>
                 <div class="column-6 w-col w-col-1"></div>
             </div>
             <div class="row p w-row">
                 <div class="w-clearfix w-col w-col-11"><img src="img/5a2bfe39a298f50001116aae_idea.png" width="32" class="image-23" />
                     <h3 class="heading-21">IDEATION</h3>
-                    <p class="paragraph-4">I spent a couple of hours understanding the problem domain. Found out how big the problem is, what are the current solutions available, and possible ways to mitigate this problem. I had to personally spent time interviewing the founder and the co-founders of the App initiative understanding the process in detail. This gave me insights I needed to define a solution.</p>
+                    <p class="paragraph-4">The key focus throughout the project concentrated on authoritative seminal report. The requirement was reinforced through compelling data visualization engaging analysis. To diminution the mind-numbing bars and pie charts, I tried to play with a mix of warm and cool colors. I was quite firm to take all the complexity and make it simple. Also, while designing, I tried not to provide fuller picture which results in visual noise that distracts and detracts from the dashboard’s intended purpose.</p>
                 </div>
                 <div class="column-6 w-col w-col-1"></div>
             </div>
