--- a/tutorialspoint.html
+++ b/tutorialspoint.html
@@ -71,7 +71,7 @@
             <div class="row w-row">
                 <div data-ix="col1" class="col1 w-col w-col-6">
                     <h3 class="heading-18">Scope</h3>
-                    <p class="paragraph-3">Tutorial&#x27;s Point is an iOS tutorial app. The main objective of Tutorial&#x27;s Point is to</p>
+                    <p class="paragraph-3">The aim was to bridge the gap between information and technology, so I decided to redesign the app. I wanted the UI to be as simple as breathing, since the app provides a platform for the aspiring people to learn and grow on their own.</p>
                 </div>
                 <div data-ix="col2" class="col2 p w-col w-col-6">
                     <h4 class="heading-20 _1">Type</h4>
@@ -110,14 +110,14 @@
             <div class="row p w-row">
                 <div class="w-clearfix w-col w-col-11"><img src="img/5a2bfe394584a6000127dc64_search.png" width="32" class="image-23" />
                     <h3 class="heading-21">RESEARCH</h3>
-                    <p class="paragraph-4">I spent a couple of hours understanding the problem domain. Found out how big the problem is, what are the current solutions available, and possible ways to mitigate this problem. I had to personally spent time interviewing the founder and the co-founders of the App initiative understanding the process in detail. This gave me insights I needed to define a solution.</p>
+                    <p class="paragraph-4">I always have a zest to learn recent technologies and languages, and this eagerness took me to “Tutorials point”. I was amazed by the content they provide for nearly everything. However, I was little disappointed by the UI they offered. Initially, I started by defining the brand element and the primary color was inspired from the existing app, in line with the vision of adding warmth and vibrancy to the app. Yellow was introduced as the secondary color. My vision was quite clear and it didn’t take much time to put things in place.</p>
                 </div>
                 <div class="column-6 w-col w-col-1"></div>
             </div>
             <div class="row p w-row">
                 <div class="w-clearfix w-col w-col-11"><img src="img/5a2bfe39a298f50001116aae_idea.png" width="32" class="image-23" />
                     <h3 class="heading-21">IDEATION</h3>
-                    <p class="paragraph-4">I spent a couple of hours understanding the problem domain. Found out how big the problem is, what are the current solutions available, and possible ways to mitigate this problem. I had to personally spent time interviewing the founder and the co-founders of the App initiative understanding the process in detail. This gave me insights I needed to define a solution.</p>
+                    <p class="paragraph-4">At this stage I had an unobstructed vision about adding few necessary functionalities, which I looked-for while using the app in my early days. I had proper content categorization and tutor profiles to direct the user to their respective interest and tutor. The idea behind the efforts I invested on redesigning “Tutorial Point’s App” was to gain the user’s trust and credibility through an easy navigation along with detailed information and a pinch of entertaining element to keep the overall learning experience captivating.</p>
                 </div>
                 <div class="column-6 w-col w-col-1"></div>
             </div>
