--- a/zomatoforschools.html
+++ b/zomatoforschools.html
@@ -71,7 +71,7 @@
             <div class="row w-row">
                 <div data-ix="col1" class="col1 w-col w-col-6">
                     <h3 class="heading-18">Scope</h3>
-                    <p class="paragraph-3">This is a concept for searching Schools and Colleges just like we search Restaurants in Zomato. Herein the user will get the list of Schools and Colleges according to the area he is living in. Also the user can search for Schools and Colleges according to any specific area they prefer. Moreover,the user can also Favourite his/her School or College and also view all the evenets that are happening in there.</p>
+                    <p class="paragraph-3">People, nowadays are extremely focused about their studies and career. Even parents are quite inclined towards their kid’s aspirations. Thinking of this, an idea clicked my mind, why not to use the technology to make the best schools and college available to students in just one click like eateries is accessible to us. I picked Zomato for this, and redesigned it.</p>
                 </div>
                 <div data-ix="col2" class="col2 p w-col w-col-6">
                     <h4 class="heading-20 _1">Type</h4>
@@ -110,14 +110,14 @@
             <div class="row p w-row">
                 <div class="w-clearfix w-col w-col-11"><img src="img/5a2bfe394584a6000127dc64_search.png" width="32" class="image-23" />
                     <h3 class="heading-21">RESEARCH</h3>
-                    <p class="paragraph-4">I spent a couple of hours understanding the problem domain. Found out how big the problem is, what are the current solutions available, and possible ways to mitigate this problem. I had to personally spent time interviewing the founder and the co-founders of the App initiative understanding the process in detail. This gave me insights I needed to define a solution.</p>
+                    <p class="paragraph-4">I spent a couple of hours understanding, in what all the users will be interested while looking for the best school and colleges. When I had the functionalities clear in my mind, I started to work on the designs. I had a word with the students in my society and to have a better insight about the issue they face while changing their schools or moving to different cities.</p>
                 </div>
                 <div class="column-6 w-col w-col-1"></div>
             </div>
             <div class="row p w-row">
                 <div class="w-clearfix w-col w-col-11"><img src="img/5a2bfe39a298f50001116aae_idea.png" width="32" class="image-23" />
                     <h3 class="heading-21">IDEATION</h3>
-                    <p class="paragraph-4">Keeping the content strategy at helm of designing, I adopted a different approach and explored unusual navigation. Here, I focused on minutest of elements and movements because every action on website had to speak about the capabilities of Hakuna Matata.</p>
+                    <p class="paragraph-4">This concept for searching Schools and Colleges, will get students a list of Schools and Colleges according to the area he is living in or planning to move. Moreover, the student can also favorite Schools/Colleges they like. I also added a functionality, wherein they will be able to view all the events that are happening in the school/college they have marked as favorite.</p>
                 </div>
                 <div class="column-6 w-col w-col-1"></div>
             </div>
