comma removed from about section

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <div id="about" class="hero _2 _4">
         <div class="container _2 w-container">
             <h1 data-ix="workheading" class="heading-3">i am swapnil saraf</h1>
-            <h4 data-ix="workp" class="heading-4 about">Freelance UI/UX Designer, Traveller, Amateur Photographer, and a Soccer Fan</h4>
+            <h4 data-ix="workp" class="heading-4 about">Freelance UI/UX Designer, Traveller, Amateur Photographer and a Soccer Fan</h4>
             <div class="row a w-row">
                 <div class="w-col w-col-6">
                     <div class="aboutblock"><img src="img/5936e7935b0b327621f90ed0_me.png" width="350" srcset="https://daks2k3a4ib2z.cloudfront.net/5933bf0eaf3cc879799d9bed/5936e7935b0b327621f90ed0_me-p-500.png 500w, https://daks2k3a4ib2z.cloudfront.net/5933bf0eaf3cc879799d9bed/5936e7935b0b327621f90ed0_me-p-800.png 800w, https://daks2k3a4ib2z.cloudfront.net/5933bf0eaf3cc879799d9bed/5936e7935b0b327621f90ed0_me.png 1000w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 350px, (max-width: 991px) 339px, 350px" class="aboutimage" />
