--- a/miid-dashboard.html
+++ b/miid-dashboard.html
@@ -29,6 +29,12 @@
     </script>
     <link href="https://uploads-ssl.webflow.com/5b4da163cde7f8b0b000fcab/5ba5a801c325b67c8933e5c8_logo%402x.png" rel="shortcut icon" type="image/x-icon" />
     <link href="https://uploads-ssl.webflow.com/5b4da163cde7f8b0b000fcab/5ba5a805c325b61e6b33e5ca_logo2%402x.png" rel="apple-touch-icon" />
+
+     <style>
+        .w-webflow-badge{
+            display: none;
+        }
+    </style>
 </head>
 
 <body class="body">
