webflow icon removed

--- a/frankit.html
+++ b/frankit.html
@@ -31,8 +31,8 @@
     <link href="https://uploads-ssl.webflow.com/5b4da163cde7f8b0b000fcab/5ba5a805c325b61e6b33e5ca_logo2%402x.png" rel="apple-touch-icon" />
 
      <style>
-        .w-webflow-badge{
-            display: none;
+        a.w-webflow-badge {
+            display: none!important;
         }
     </style>
 </head>
