MIID Dashboard - typo change

--- a/ux-studio-design-challenge.html
+++ b/ux-studio-design-challenge.html
@@ -163,7 +163,7 @@
                     <div class="div-block-4 prev"><a href="/frankit" class="w-inline-block"><h4 class="heading-8">previous</h4><h3 class="heading-9">Frankit</h3><div class="text-block-3">A well curated market place which lists top<br/>Hospitals, Clinics and Facilitators across India</div></a></div>
                 </div>
                 <div class="w-col w-col-6">
-                    <div class="div-block-4 next"><a href="/miid-dashboard" class="w-inline-block"><h4 class="heading-8 next">NEXT</h4><h3 class="heading-9">MIID Design</h3><div class="text-block-3">Summary Dashboard for keeping track of daily<br/>checks of a Retail Organization</div></a></div>
+                    <div class="div-block-4 next"><a href="/miid-dashboard" class="w-inline-block"><h4 class="heading-8 next">NEXT</h4><h3 class="heading-9">MIID Dashboard</h3><div class="text-block-3">Summary Dashboard for keeping track of daily<br/>checks of a Retail Organization</div></a></div>
                 </div>
             </div>
         </div>
