--- a/frankit.html
+++ b/frankit.html
@@ -76,7 +76,7 @@
         <div class="container-3 w-container">
             <h1 class="heading work">Overview</h1>
             <div class="div-block-2"></div>
-            <p class="projectp"><span class="text-span-5 role">Scope :</span> Parth, the founder of Frankit Solutions, was already working on this website. He approached me to design a user first experience, as the current website was lacking both in visual and user experience.
+            <p class="projectp"><span class="text-span-5 role">Scope :</span> Parth, the founder of Frankit, was already working on this website. He approached me to design a user first experience, as the current website was lacking both in visual and user experience.
                 <br/>
                 <br/>My goal was to consider the entire process — from the moment a patient searches for his treatment and finds a suitable cure to when he/she come backs as healthy person.
                 <br/>
