--- a/ux-studio-design-challenge.html
+++ b/ux-studio-design-challenge.html
@@ -152,7 +152,7 @@
             <div class="div-block-3 stg rl"></div>
             <p class="projectp dm uj">Learned UI design patterns by following iOS design guidelines.
                 <br/>Learned new tool Marvel, for Prototyping.
-                <br/>Learned Sketch App for designing high fidelity designing.
+                <br/>Learned Sketch App for designing high fidelity mockups.
                 <br/>
             </p><a href="https://marvelapp.com/19agad06/screen/47951744" target="_blank" class="w-inline-block"><h3 class="dptitle proto">Play with Prototype</h3></a></div>
     </div>
