--- a/index2.html
+++ b/index2.html
@@ -40,7 +40,7 @@
 <body class="body">
     <div data-collapse="medium" data-animation="default" data-duration="400" class="navigation-bar dark w-nav">
         <a href="index.html" class="brand-link left-spacing w-nav-brand"><img src="https://uploads-ssl.webflow.com/5b4da163cde7f8b0b000fcab/5b695199762831286920a6c2_l.png" width="80" class="image-4" />
-            <h1 class="brand-text">swapnil<span class="text-span-18">saraf</span><span class="text-span-15"></span><span class="text-span-2"></span></h1></a>
+            <h1 class="brand-text">swapnil<span class="text-span-18">saraf</span></h1></a>
         <nav role="navigation" class="navigation-menu w-nav-menu"><a href="index.html" class="navigation-link white w-nav-link w--current">work</a><a href="about.html" class="navigation-link white other w-nav-link">about<br/>‍</a><a href="https://uploads-ssl.webflow.com/5b4da163cde7f8b0b000fcab/5ba85a6a9ad787931d1f8935_SwapnilSaraf_Resume.pdf" target="_blank" class="navigation-link white other w-nav-link">resume</a></nav>
         <div class="hamburger-button white w-nav-button">
             <div class="icon w-icon-nav-menu"></div>
