last name change

--- a/miid-dashboard.html
+++ b/miid-dashboard.html
@@ -36,7 +36,7 @@
 </head>
 
 <body class="body">
-    <div data-collapse="medium" data-animation="default" data-duration="400" class="navigation-bar dark w-nav"><a href="/" class="brand-link left-spacing w-nav-brand"><h1 class="brand-text">swapnil<span class="text-span">saraf</span><span class="text-span-22">.</span></h1></a>
+    <div data-collapse="medium" data-animation="default" data-duration="400" class="navigation-bar dark w-nav"><a href="/" class="brand-link left-spacing w-nav-brand"><h1 class="brand-text">swapnil<span class="text-span">saraf</span>/h1></a>
         <nav role="navigation" class="navigation-menu w-nav-menu"><a href="/" class="navigation-link white w-nav-link">work</a><a href="/about" class="navigation-link white other work w-nav-link">about<br/>‍</a><a target="_blank" href="https://uploads-ssl.webflow.com/5b4da163cde7f8b0b000fcab/5ba85a6a9ad787931d1f8935_SwapnilSaraf_Resume.pdf" class="navigation-link white other work w-nav-link">resume</a></nav>
         <div class="hamburger-button white w-nav-button">
             <div class="icon w-icon-nav-menu"></div>
