--- a/frankit.html
+++ b/frankit.html
@@ -94,7 +94,7 @@
                 <br/><span class="text-span-8">3.</span> Reliability/Trust
                 <br/>
             </p>
-            <p class="projectp"><span class="text-span-5 role">Solution :</span> I re-designed the website in such a way that the user was able to easily navigate through all the top Hospitals and Clinics across India. User was given option to filter according to <em>Treatments</em>, <em>Specialty</em>, <em>Location </em>and the type of <em>Accreditation </em>the Hospital or Clinic is holding.
+            <p class="projectp"><span class="text-span-5 role">Solution :</span> I re-designed the website in such a way that the user was able to easily navigate through all the top Hospitals and Clinics across India. User was given option to filter according to <em>Treatments</em>, <em>Specialty</em>, and<em>Location </em>.
                 <br/>
                 <br/>I also listed the Facilitators on the website which acted as an Agent between the Hospitals/Clinics and the Patients.
                 <br/>‍
@@ -279,7 +279,7 @@
             </p><img src="https://uploads-ssl.webflow.com/5b4da163cde7f8b0b000fcab/5b92ec2c6708aa2c29e0ede8_design_guide%402x.png" srcset="https://uploads-ssl.webflow.com/5b4da163cde7f8b0b000fcab/5b92ec2c6708aa2c29e0ede8_design_guide%402x-p-500.png 500w, https://uploads-ssl.webflow.com/5b4da163cde7f8b0b000fcab/5b92ec2c6708aa2c29e0ede8_design_guide%402x-p-800.png 800w, https://uploads-ssl.webflow.com/5b4da163cde7f8b0b000fcab/5b92ec2c6708aa2c29e0ede8_design_guide%402x-p-1080.png 1080w, https://uploads-ssl.webflow.com/5b4da163cde7f8b0b000fcab/5b92ec2c6708aa2c29e0ede8_design_guide%402x-p-1600.png 1600w, https://uploads-ssl.webflow.com/5b4da163cde7f8b0b000fcab/5b92ec2c6708aa2c29e0ede8_design_guide%402x.png 1756w" sizes="100vw" />
             <h3 class="dptitle">Reflections and Learning</h3>
             <div class="div-block-3"></div>
-            <p class="projectp dm uj"><span class="text-span-5 udm">This was the first project where I not only worked as an UI Designer but also an UX Designer. I learned that every problem looks difficult initially, but with right approach and design mindset we can solve any issues and achieve great results. Designing effectively means bridging business needs, technical constraints and finally providing user satisfaction. <br/><br/>Creating a design language which clearly communicates the form and function, and is also aesthetically pleasing which encourages the users to often use the app was a tough nut to crack. Got to learn new collaborative design tool <strong>Balsamiq</strong> for brainstorming and wire-framing.</span>
+            <p class="projectp dm uj"><span class="text-span-5 udm">This was the first project where I not only worked as an UI Designer but also an UX Designer. I learned that every problem looks difficult initially, but with right approach and design mindset we can solve any issues and achieve great results. Designing effectively means bridging business needs, technical constraints and finally providing user satisfaction. <br/><br/>Creating a design language which clearly communicates the form and function, and is also aesthetically pleasing which encourages the users to often use the app was a tough nut to crack.</span>
                 <br/>
             </p>
         </div>
