--- a/miid-dashboard.html
+++ b/miid-dashboard.html
@@ -104,7 +104,8 @@
             <div class="div-block-3"></div>
             <p class="projectp dm uj">Working on this project with Accenture really helped me learn some fundamental principles of Design Visualization. I was lucky to be guided by senior Data Visualizers who helped me a lot - for choosing the right colors, for displaying the information through the right Visual elements and so on. I also got to work in an Agile methodology which helped me in interacting with the clients and getting to know their functionalities and requirements. Followed the basic Visualization Design principles for designing the dashboard.
                 <br/>
-                <br/>From technical point of view, this was my first time working on Adobe Experience Design(XD), and I really loved it.
+                <br/>From technical point of view, this was my first time working on Adobe Experience Design(XD), and I really loved it.  
+                Got to learn new collaborative design tool <strong>Balsamiq</strong> for brainstorming and wire-framing.
                 <br/>
             </p>
         </div>
