--- a/frankit.html
+++ b/frankit.html
@@ -140,7 +140,7 @@
             </p>
             <h3 class="dptitle">User&#x27;s Journey</h3>
             <div class="div-block-3"></div>
-            <p class="projectp dm uj"><span class="text-span-5 udm">I identified the key specs that had to be included in the website in order to build the MVP, then mapped out user flows based on those specs (a lot of white-boarding was involved). At this point in the process, I found participatory design to be extremely helpful. I actually had end users mapping out their ideal flows, which I was then able to incorporate into my design.</span>
+            <p class="projectp dm uj"><span class="text-span-5 udm">I identified the key specs that had to be included in the website in order to build the MVP, then mapped out user flows based on those specs (a lot of white-boarding was involved).</span>
                 <br/>
             </p><img src="https://uploads-ssl.webflow.com/5b4da163cde7f8b0b000fcab/5b574ca48a943864e232e723_UF.png" srcset="https://uploads-ssl.webflow.com/5b4da163cde7f8b0b000fcab/5b574ca48a943864e232e723_UF-p-500.png 500w, https://uploads-ssl.webflow.com/5b4da163cde7f8b0b000fcab/5b574ca48a943864e232e723_UF-p-800.png 800w, https://uploads-ssl.webflow.com/5b4da163cde7f8b0b000fcab/5b574ca48a943864e232e723_UF-p-1080.png 1080w, https://uploads-ssl.webflow.com/5b4da163cde7f8b0b000fcab/5b574ca48a943864e232e723_UF.png 1847w" sizes="100vw" />
             <h3 class="dptitle">Information Architecture</h3>
